Closed Bug 1940250 Opened 1 month ago Closed 18 days ago

Aspect ratio (SAR/DAR) is ignored in HEVC video

Categories

(Core :: Audio/Video: Playback, defect, P2)

Firefox 134
defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox136 --- fixed

People

(Reporter: dantmnf2, Assigned: alwu)

References

(Blocks 1 open bug)

Details

(Keywords: parity-chrome, webcompat:platform-bug)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:134.0) Gecko/20100101 Firefox/134.0

Steps to reproduce:

Attempt to play an HEVC-encoded video, such as the attached file, or generated by

ffmpeg -f lavfi -i testsrc=s=1920x1080:d=10 -vf scale=1440x1080,setsar=sar=4/3 -pix_fmt yuv420p -c:v libx265 a_1440x1080_sar_4_3_hevc.mp4

Actual results:

The video appears as 4:3, SAR/DAR is ignored.

With AVC-encoded video (replace libx265 with libx264 in the command before), the video correctly shows as 16:9. Seems a bit unrelated to 1868032 .

Expected results:

The video should appear as 16:9.

The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core
Assignee: nobody → alwu
Blocks: hevc
Severity: -- → S3
Priority: -- → P2
See Also: → 1868032

Depends on D236056

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/63befe040db3 part1 : apply Pixel Aspect Ratio (PAR) on the display size for HEVC. r=media-playback-reviewers,padenot https://hg.mozilla.org/integration/autoland/rev/faf2d5460822 part2 : add test cases. r=media-playback-reviewers,padenot
Status: UNCONFIRMED → RESOLVED
Closed: 18 days ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
Flags: qe-verify+

I have reproduced this issue using Firefox 136.0a1 (2025.01.07) on Windows 11.
I can confirm this issue is fixed, I verified using Firefox 136.0b2 on Win 11 and on macOS 12, the video has the expected aspect ratio.
On Ubuntu the HEVC video still not playing.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: