Bug 1940250 - part1 : apply Pixel Aspect Ratio (PAR) on the display size for HEVC. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D236056